--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 0.7.5/5-23-2009
+* 1 Bugfix:
+  * fixed problem with parsing shebang lines
+
 === 0.7.4/5-20-2009
 * 2 Major Enhancements:
   * preliminary support for ruby 1.9
